# nanoeconomics-simulation

./: .gitignore  CITATION.cff  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md
docs/: interpretation.md  methodology.md  network-dynamics.md  parameters.md
notebooks/: exploration.ipynb  walkthrough.ipynb
src/: animation.py  community.py  outcomes.py  relational.py  shocks.py  simulation.py  society.py  survival.py  wealth.py
tests/: test_community.py  test_outcomes.py  test_relational.py  test_shocks.py  test_simulation.py  test_society.py  test_survival.py  test_wealth.py
